# yes-we-wheelchair

./: EncoderL.ino  Matlab.m  README.md  odometry.cpp  plotData.m  readEncodersDumb.ino.ino  readEncodersNew.ino
Arduino/Encoder Codes/: ReadMe.md  readme.md
CAN Work/examples/drive/: drive.ino
CAN Work/examples/send/: send.ino
CAN Work/examples/set_mask_filter_send/: set_mask_filter_send.ino
Encoder Code/EncoderL/: EncoderL.ino
Encoder Code/EncoderR/: EncoderR.ino
Encoder Code/Old Encoder code/ArduinoOdometry/: ArduinoOdometry.ino
ROS/Odom/: Odom.ino
ROS/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
ROS/catkin_ws/devel/lib/beginner_tutorials/: listener  talker
ROS/catkin_ws/devel/lib/pkgconfig/: beginner_tutorials.pc  libntcan.pc  libpcan.pc  libphidgets.pc  lidar.pc  ros_for_can.pc
ROS/catkin_ws/devel/lib/ros_for_can/: ros_for_can_receive  ros_for_can_write
ROS/catkin_ws/src/CENTRAL COMPUTER ODOM WORK/: odomCreator.cpp
ROS/catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/lidar/: CMakeLists.txt  package.xml
ROS/catkin_ws/src/lidar/launch/: Lidar_To_Camera.launch  Lidar_To_Camera.launch~  demo.config.rviz  sensor.launch  sensor.launch~
ROS/catkin_ws/src/odom_testing/: CMakeLists.txt  listener.cpp  talker.cpp
ROS/catkin_ws/src/ros_for_can/: CMakeLists.txt  CMakeLists.txt~
ROS/catkin_ws/src/ros_for_can/include/ros_for_can/: CanItf.h  CanMsg.h  ros_for_can.h
ROS/catkin_ws/src/ros_for_can/src/: IniFile.cpp  main.cpp  ros_for_can.cpp  write.cpp  write.cpp~
ROS/readEncodersROSOdom/: readEncodersROSOdom.ino
(+4 files in other folders)
